unpackaged/main/default/objects/PDF_Company_Information__mdt/PDF_Company_Information__mdt.object-meta.xml
<CustomObject>
    <label>PDF Company Information</label>
    <pluralLabel>PDF Company Information</pluralLabel>
</CustomObject>