unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Accounting_Reply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Reply_To_Email_Address__c</fullName>
    <label>Accounting Reply To Email Address</label>
    <type>Email</type>
</CustomField>