unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip__c</fullName>
    <label>City State Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>