unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Invoice_Reply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reply_To_Email_Address__c</fullName>
    <label>Invoice Reply To Email Address</label>
    <type>Email</type>
</CustomField>