unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Operations_Reply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Operations_Reply_To_Email_Address__c</fullName>
    <label>Operations Reply To Email Address</label>
    <type>Email</type>
</CustomField>