unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>