unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Account</fullName>
                <default>true</default>
                <label>US Account</label>
            </value>
            <value>
                <fullName>Canadian Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>