unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Remit_To_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Remit_To_Address_2__c</fullName>
    <label>Remit To Address 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>