unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Remit_To_Attn_To__c.field-meta.xml
<CustomField>
    <fullName>Remit_To_Attn_To__c</fullName>
    <label>Remit To Attn To</label>
    <length>150</length>
    <type>Text</type>
</CustomField>