unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Remit_To_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Remit_To_City_State_Zip__c</fullName>
    <label>Remit To City, State, Zip</label>
    <length>150</length>
    <type>Text</type>
</CustomField>