unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>