unpackaged/main/default/objects/PDF_Company_Information__mdt/fields/Suite__c.field-meta.xml
<CustomField>
    <fullName>Suite__c</fullName>
    <label>Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>